err/pysprites.err
Listing '.'...
Listing './bin'...
Compiling './bin/psd-tools.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psd_tools'...
Listing './lib/python3.5/site-packages/psd_tools/decoder'...
Listing './lib/python3.5/site-packages/psd_tools/icc_profiles'...
Listing './lib/python3.5/site-packages/psd_tools/reader'...
Listing './lib/python3.5/site-packages/psd_tools/user_api'...
Listing './lib/python3.5/site-packages/psd_tools-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pysprites'...
Compiling './lib/python3.5/site-packages/pysprites/sprites.py'...
***   File "./lib/python3.5/site-packages/pysprites/sprites.py", line 278
    print sprites.__doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pysprites-2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
